fixed filter text is overlapped

--- a/src/components/Choice/Choice.scss
+++ b/src/components/Choice/Choice.scss
@@ -12,6 +12,7 @@
 
 .ui__choice__label {
   font-size: 13px !important;
+  overflow: hidden  ;
 }
 
 .ui__choice__input--switch {
